# freqtrade-monitor

./: .gitignore  CHANGELOG.md  DEPLOYMENT_GUIDE.md  README.md  USER_MANUAL_v2.0.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
frontend/: .env.example  Dockerfile  next.config.js  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: apiClient.ts
